# lemon-API

./: .env-template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
frontend/src/app/home/: home.component.html  home.component.scss
frontend/src/app/nav/: nav.component.html  nav.component.scss
frontend/src/app/pagenotfound/: pagenotfound.component.html  pagenotfound.component.scss
frontend/src/styles/: _variables.scss
lemonapi/: main.py
lemonapi/endpoints/: lemons.py  notes.py  search.py  security.py  shortener.py
lemonapi/templates/: api_token.html  base.html  better-docs.html  docs.html  error.html  login.html  test.html
lemonapi/utils/: auth.py  cache.py  constants.py  database.py  dependencies.py  errors.py  schemas.py  scopes.py
lemonapi/utils/services/: note_service.py  url_service.py  user_service.py
postgres/: init.sql
tests/: conftest.py  test_auth.py  test_lemon.py  test_main.py  test_urls.py
tests/data/backend/: advanced-fastapi.txt  api-authentication.txt  background-tasks.txt
tests/data/database/: backups-and-restore.txt  connection-pooling.txt  indexing-strategies.txt
tests/data/infra/: ci-cd-pipelines.txt  docker-basics.txt  infrastructure-as-code.txt
